fixing alignment issues in Firefox

--- a/dev-app/src/app/components/ngTextRoll/ngtextroll.css
+++ b/dev-app/src/app/components/ngTextRoll/ngtextroll.css
@@ -1,5 +1,6 @@
 #ng-text-roll {
   display: inline-block;
+  vertical-align: text-bottom;
 }
 #ng-text-roll .outer {
   display: -webkit-box;
